# Starling-App

./: README.md  pyproject.toml
src/: main.py  main2.py
src/api/: accounts.py  transactions.py
src/utils/: starlingHttpClient.py
tests/api/: test_accounts.py  test_transactions.py
tests/utils/: test_starlingHttpClient.py
